<resources>
    <string name="app_name">Ønskestjernen</string>


    <string name="button_label_login">Login</string>
    <string name="button_label_register">Register</string>

    <string name="hint_name">Name</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>

    <string name="text_register_now">Don\'t have an account? Register now!</string>
    <string name="text_already_registered">Already have an account? Login now!</string>


    <string-array name="color_array">
        <item>None</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
    </string-array>
</resources>
