<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="dk.zebweb.kiddiebankapp.LoginActivity">


<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:src="@mipmap/ic_launcher"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/login_activity_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/hint_username"
        android:text="lunding@me.com"/>

    <EditText
        android:id="@+id/login_activity_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/login_activity_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:background="#bcbcbc"
        android:text="@string/button_label_login"/>

</LinearLayout>


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3">

    <TextView
        android:id="@+id/login_activity_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_register_now"/>
</FrameLayout>

</LinearLayout>
