<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="dk.zebweb.kiddiebankapp.RegisterActivity">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:src="@mipmap/ic_launcher"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/register_activity_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/register_activity_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/hint_username" />

    <EditText
        android:id="@+id/register_activity_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_password" />

    <EditText
        android:id="@+id/register_activity_edit_password_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_password" />

    <EditText
        android:id="@+id/register_activity_edit_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:ems="10"
        android:hint="0 = girl, 1 = boy" />

    <Button
        android:id="@+id/register_activity_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:background="#bcbcbc"
        android:text="@string/button_label_register" />

</LinearLayout>


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3">

    <TextView
        android:id="@+id/register_activity_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_already_registered"/>
</FrameLayout>

</LinearLayout>
